Hero section small screen scroll issue resolved

--- a/src/components/Hero.module.css
+++ b/src/components/Hero.module.css
@@ -150,3 +150,9 @@
     bottom: 15%;
   }
 }
+
+@media (max-width: 683px) {
+  .scrollContainer {
+    height: 200vh;
+  }
+}
